@@ -1,3 +1,8 @@
+Sun Jan 31 18:34:59 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* node.c (netfs_attempt_utimes): Implement new possibility that
+	ATIME or MTIME might be null.
+
 1997-08-27  Miles Bader  <miles@gnu.ai.mit.edu>
 
 	* mux.c (netfs_attempt_lookup): Clear *NODE on errors.
